pkg/controller/appdefinition/testdata/ingress/letsencrypt/expected.yaml.d/appinstance.yaml
kind: AppInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: app-name
  namespace: app-namespace
  uid: 1234567890abcdef
spec:
  image: test
  ports:
    - targetServiceName: app1
      serviceName: ci1.acorn.not
      publish: true
    - targetServiceName: app2
      serviceName: ci1.acorn.not
      publish: true
status:
  namespace: app-created-namespace
  appImage:
    id: test
  appSpec:
    containers:
      app1:
        image: "image-name"
        ports:
          - port: 80
            targetPort: 81
            protocol: "http"
            name: "80"
            publish: true
      app2:
        image: "image-name"
        ports:
          - port: 80
            targetPort: 81
            protocol: "http"
            name: "80"
            publish: true
  conditions:
    - type: defined
      reason: Success
      status: "True"
      success: true
---
