pkg/controller/appdefinition/testdata/ingress/letsencrypt/expected.yaml.d/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app1"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "app1"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/app-public-name": "app-name"
        "acorn.io/container-name": "app1"
        "acorn.io/managed": "true"
      annotations:
        acorn.io/container-spec: '{"image":"image-name","ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81}],"probes":null}'
    spec:
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      serviceAccountName: app1
      hostname: app1
      imagePullSecrets:
        - name: app1-pull-1234567890ab
      containers:
        - name: app1
          image: "image-name"
          ports:
            - containerPort: 81
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 81
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app2"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "app2"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/app-public-name": "app-name"
        "acorn.io/container-name": "app2"
        "acorn.io/managed": "true"
      annotations:
        acorn.io/container-spec: '{"image":"image-name","ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81}],"probes":null}'
    spec:
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      serviceAccountName: app2
      hostname: app2
      imagePullSecrets:
        - name: app2-pull-1234567890ab
      containers:
        - name: app2
          image: "image-name"
          ports:
            - containerPort: 81
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 81
---
