pkg/controller/appdefinition/testdata/ingress/letsencrypt/expected.yaml.d/service.yaml
---
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: app1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app1"
    "acorn.io/managed": "true"
    "acorn.io/public-name": "app-name.app1"
  annotations:
    acorn.io/app-generation: "0"
spec:
  appName: app-name
  appNamespace: app-namespace
  publish:
  - hostname: ci1.acorn.not
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app1"
    "acorn.io/managed": "true"
  container: app1
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
---
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: app2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app2"
    "acorn.io/managed": "true"
    "acorn.io/public-name": "app-name.app2"
  annotations:
    acorn.io/app-generation: "0"
spec:
  appName: app-name
  appNamespace: app-namespace
  publish:
  - hostname: ci1.acorn.not
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "app2"
    "acorn.io/managed": "true"
  container: app2
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
