pkg/controller/appdefinition/testdata/ingress/letsencrypt/expected.yaml.d/serviceaccount.yaml
kind: ServiceAccount
apiVersion: v1
metadata:
  name: app1
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/container-name: app1
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: app2
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/container-name: app2
